// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-validate <f-form display-error="maybe"><button type="submit">Submit</button></f-form> should be invalid 1`] = `
[Error: Expected HTML to be valid but had the following errors:

  Attribute "display-error" has invalid value "maybe" [attribute-allowed-values]]
`;

exports[`html-validate <f-form></f-form> should be invalid 1`] = `
[Error: Expected HTML to be valid but had the following errors:

  <f-form> element must have a submit button [wcag/h32]]
`;

exports[`html-validate <f-form><template #error-message>Error</template></f-form> should be invalid 1`] = `
[Error: Expected HTML to be valid but had the following errors:

  <f-form> element must have a submit button [wcag/h32]]
`;

exports[`html-validate <f-form><template #tooltip>Tooltip</template><button type="submit">Submit</button></f-form> should be invalid 1`] = `
[Error: Expected HTML to be valid but had the following errors:

  <f-form> component has no slot "tooltip" [vue/available-slots]]
`;

exports[`snapshots should match snapshot when pristine 1`] = `
<form
  class="form"
  id="test-id"
  novalidate=""
>
  <!--v-if-->
  
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <f-label-stub
        class=""
        for="element1"
      />
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          aria-invalid="false"
          class="text-field__input"
          data-required=""
          data-validation=""
          id="element1"
          required=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <f-label-stub
        class=""
        for="element2"
      />
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          aria-invalid="false"
          class="text-field__input"
          data-required=""
          data-validation=""
          id="element2"
          required=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  
</form>
`;

exports[`snapshots should match snapshot with errors 1`] = `
<form
  class="form"
  id="test-id"
  novalidate=""
>
  <f-message-box-stub
    banner="false"
    layout="standard"
    providescreenreadercontext="true"
    tabindex="-1"
    type="error"
  />
  
  <div
    class="text-field text-field--error"
  >
    <div
      class="i-width-sm-12"
    >
      <f-label-stub
        class=""
        for="element1"
      />
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          aria-invalid="true"
          class="text-field__input"
          data-required=""
          data-validation=""
          id="element1"
          required=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="text-field text-field--error"
  >
    <div
      class="i-width-sm-12"
    >
      <f-label-stub
        class=""
        for="element2"
      />
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          aria-invalid="true"
          class="text-field__input"
          data-required=""
          data-validation=""
          id="element2"
          required=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  
</form>
`;
